# BIC_TUT_2023

./: CMakeLists.txt  links_cmake  pointer.c  popen.c  reader.c  reader_02.Juni.c  sender_02.Juni.c  test.c  test1.c  ve.c
2023/: pass_by_reference.c
2023/assignment3/: sender.c
2024/: assignment1_2024.c  new_writer.c
2024/13_juni/: assignment1.c  assignment1_2024_popen.h  mypclose.c  mypopen.c
2024/assignment2/: new_reader.c  ring_buffer_links.c
2024/assignment2/jun6_2024/: ring_buff.c  sem.c
BSYS2023/: links_cmake
